[package]
name = "fe_osi"
version = "0.1.0"
authors = ["Bijan Tabatabai <bijan311@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.cstr_core]
version = "0.1.2"
features = ["alloc"]

[build-dependencies]
cc = "1.0.25"
