[package]
name = "fe_rtos"
version = "0.1.0"
authors = ["Bijan Tabatabai <bijan311@yahoo.com>"]
edition = "2018"

[dependencies]
fe_osi = { path = "../fe_osi" }
cortex-m = "0.6"

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
cc = "1.0.25"
