[package]
name = "fe_rtos"
version = "0.1.0"
authors = [
    "Bijan Tabatabai <bijan311@gmail.com>",
    "Dakota Kitzman <dakota.kitzman@gmail.com>"
]
edition = "2018"

[dependencies]
fe_osi = { path = "../fe_osi" }

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.cstr_core]
version = "0.1.2"
features = ["alloc"]

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6"

[build-dependencies]
cc = "1.0.25"
