[package]
name = "fe_rtos"
version = "0.1.1"
authors = [
    "Bijan Tabatabai <bijan311@gmail.com>",
    "Dakota Kitzman <dakota.kitzman@gmail.com>"
]
edition = "2021"
description = "A simple OS for Arm Cortex-M CPUs"
readme = "../README.md"
repository = "https://github.com/badrobotics/FeRTOS"
keywords = ["cotrex-m", "rtos"]
categories = ["embedded", "no-std", "science::robotics"]
build = "build.rs"
license = "LGPL-3.0"

[dependencies]
fe_osi = { path = "../fe_osi", version = "0.1.1" }

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.cstr_core]
version = "0.2.1"
features = ["alloc"]

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6"

[build-dependencies]
cc = "1.0.25"
