[package]
authors = [
    "Dakota Kitzman <dakota.kitzman@gmail.com>",
]
edition = "2021"
readme = "README.md"
name = "fertos-project"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.fe_rtos]
path = "../../fe_rtos/"

[dependencies.fe_osi]
path = "../../fe_osi/"

[dependencies.tm4c129x-hal]
version = "0.9.0"
optional = true

[dependencies.tm4c123x-hal]
version = "0.10.0"
optional = true

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

# this lets you use `cargo fix`!
[[bin]]
name = "fertos-project"
test = false
bench = false

[features]
default = ["tm4c1294"]

tm4c1294 = ["tm4c129x-hal"]
tm4c123 = ["tm4c123x-hal"]
