[package]
name = "qemu_project"
version = "0.1.0"
authors = ["Bijan Tabatabai <bijan311@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
fe_rtos = { path = "../../fe_rtos/" }
fe_osi = { path = "../../fe_osi/" }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

