[package]
name = "riscv32_example"
version = "0.1.0"
authors = ["Bijan Tabatabai <bijan311@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fe_rtos = { path = "../../fe_rtos" }
fe_osi = { path = "../../fe_osi" }
